@@ -1,67 +1,0 @@
-export CPU=cpu-b34-fb01
-export CPU_ARCH=linuxRT-x86_64
-export TOP=/afs/slac.stanford.edu/u/ld/jmock/Cosylab/workspace/FastFeedback
-export BASE_MODULE_VERSION=R7.0.3.1-1.0
-export EPICS_SITE_TOP=/afs/slac/g/lcls/epics
-export BASE_SITE_TOP=/afs/slac/g/lcls/epics/base
-export EPICS_MODULES=/afs/slac/g/lcls/epics/R7.0.3.1-1.0/modules
-export IOC_SITE_TOP=/afs/slac/g/lcls/epics/iocTop
-export PACKAGE_SITE_TOP=/afs/slac/g/lcls/package
-export MATLAB_PACKAGE_TOP=/afs/slac/g/lcls/package/matlab
-export PSPKG_ROOT=/afs/slac/g/lcls/pkg_mgr
-export TOOLS_SITE_TOP=/afs/slac/g/lcls/tools
-export ALARM_CONFIGS_TOP=/afs/slac/g/lcls/tools/AlarmConfigsTop
-export CHECK_RELEASE=YES
-export CROSS_COMPILER_TARGET_ARCHS=linuxRT-x86_64
-export SHARED_LIBRARIES=NO
-export STATIC_BUILD=YES
-export LINUXRT_BUILDROOT_VERSION=buildroot-2019.08
-export LINUX_VERSION=rhel6
-export KERNEL_MOD_TOP=/afs/slac/g/lcls/package/linuxKernel_Modules
-export KERNEL_MODULE_EVRMA_PACKAGE_NAME=evrmaDriver
-export KERNEL_MODULE_EVRMA_VERSION=R1.0.9
-export KERNEL_MODULE_EVRMA_TOP=/afs/slac/g/lcls/package/linuxKernel_Modules/evrmaDriver/R1.0.9
-export KERNEL_MODULE_EVRMA_KO=/afs/slac/g/lcls/package/linuxKernel_Modules/evrmaDriver/R1.0.9/buildroot-2019.08-x86_64
-export KERNEL_MODULE_EVRMA_INCLUDE=/afs/slac/g/lcls/package/linuxKernel_Modules/evrmaDriver/R1.0.9/buildroot-2019.08-x86_64/include
-export EVRMA_PACKAGE_NAME=evrma
-export EVRMA_VERSION=R1.0.9
-export EVRMA_TOP=/afs/slac/g/lcls/package/evrma/R1.0.9
-export EVRMA_LIB=/afs/slac/g/lcls/package/evrma/R1.0.9/buildroot-2019.08-x86_64/lib
-export EVRMA_INCLUDE=/afs/slac/g/lcls/package/evrma/R1.0.9/buildroot-2019.08-x86_64/include
-export CPPUNIT_PACKAGE_NAME=cppunit
-export CPPUNIT_VERSION=1.12.1
-export CPPUNIT_TOP=/afs/slac/g/lcls/package/cppunit/1.12.1
-export CPPUNIT_LIB=/afs/slac/g/lcls/package/cppunit/1.12.1/buildroot-2019.08-x86_64/lib
-export CPPUNIT_INCLUDE=/afs/slac/g/lcls/package/cppunit/1.12.1/buildroot-2019.08-x86_64/include
-export BOOST_PACKAGE_NAME=boost
-export BOOST_VERSION=1.63.0
-export BOOST_TOP=/afs/slac/g/lcls/package/boost/1.63.0
-export BOOST_LIB=/afs/slac/g/lcls/package/boost/1.63.0/buildroot-2019.08-x86_64/lib
-export BOOST_INCLUDE=/afs/slac/g/lcls/package/boost/1.63.0/buildroot-2019.08-x86_64/include
-export BOOSTBINDINGS_PACKAGE_NAME=boost-numeric-bindings
-export BOOSTBINDINGS_VERSION=1.63.0
-export BOOSTBINDINGS_TOP=/afs/slac/g/lcls/package/boost-numeric-bindings/1.63.0
-export BOOSTBINDINGS_INCLUDE=/afs/slac/g/lcls/package/boost-numeric-bindings/1.63.0/include
-export LAPACK_PACKAGE_NAME=lapack
-export LAPACK_VERSION=3.2.1
-export LAPACK_TOP=/afs/slac/g/lcls/package/lapack/3.2.1
-export LAPACK_LIB=/afs/slac/g/lcls/package/lapack/3.2.1/buildroot-2019.08-x86_64/lib
-export LAPACK_INCLUDE=/afs/slac/g/lcls/package/lapack/3.2.1/buildroot-2019.08-x86_64/include
-export BUILDROOT_HOME=/afs/slac/package/linuxRT/buildroot-2019.08
-export STAGE_X86=/afs/slac/package/linuxRT/buildroot-2019.08/buildroot-2019.08-x86_64/output/staging
-export GFORT_LIB=/afs/slac/package/linuxRT/buildroot-2019.08/buildroot-2019.08-x86_64/output/staging/usr/lib64
-export GFORT_INCLUDE=/afs/slac/package/linuxRT/buildroot-2019.08/buildroot-2019.08-x86_64/output/staging/usr/include
-export DL_LIB=/afs/slac/package/linuxRT/buildroot-2019.08/buildroot-2019.08-x86_64/output/staging/usr/lib64
-export DL_INCLUDE=/afs/slac/package/linuxRT/buildroot-2019.08/buildroot-2019.08-x86_64/output/staging/usr/include
-export QUADMATH_LIB=/afs/slac/package/linuxRT/buildroot-2019.08/buildroot-2019.08-x86_64/output/staging/usr/lib64
-export QUADMATH_INCLUDE=/afs/slac/package/linuxRT/buildroot-2019.08/buildroot-2019.08-x86_64/output/staging/usr/include
-export HAVE_CPSW=YES
-export CPSW_FWLOADER_PACKAGE_NAME=cpsw/FirmwareLoader
-export CPSW_FWLOADER_VERSION=R1.3.0
-export CPSW_FWLOADER_TOP=/afs/slac/g/lcls/package/cpsw/FirmwareLoader/R1.3.0
-export CPSW_FWLOADER_BIN=/afs/slac/g/lcls/package/cpsw/FirmwareLoader/R1.3.0/buildroot-2019.08-x86_64/bin
-export PKG_ARCH=buildroot-2019.08-x86_64
-export EVRMA_MANAGER_PACKAGE_NAME=evrManager
-export EVRMA_MANAGER_VERSION=R1.0.9
-export EVRMA_MANAGER_TOP=/afs/slac/g/lcls/package/evrManager/R1.0.9
-export EVRMA_MANAGER_BIN=/afs/slac/g/lcls/package/evrManager/R1.0.9/buildroot-2019.08-x86_64/bin
